syntax = "proto3";
import "google/protobuf/empty.proto";

service SixelpingRenderer {
  rpc NewDeltaImage (NewDeltaImageRequest) returns (google.protobuf.Empty) {}
  rpc GetCanvasParameters (google.protobuf.Empty) returns (CanvasParametersResponse) {}
  rpc MetricsUpdate (MetricsDatapoint) returns (google.protobuf.Empty) {}
  rpc GetRenderedImage (google.protobuf.Empty) returns (RenderedImageResponse) {}
}

message NewDeltaImageRequest {
  bytes image = 1;
}

message RenderedImageResponse {
  bytes image = 1;
}

message CanvasParametersResponse {
  uint32 width = 1;
  uint32 height = 2;
  uint32 fps = 3;
}

//Message to send metrics out
message MetricsDatapoint {
  uint64 ipackets = 1;
  uint64 opackets = 2;
  uint64 dpackets = 3;
  string mac = 4;
}